--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
     </head>
 
     <body class="min-h-screen w-full flex flex-col items-center justify-center overflow-x-hidden">
-        <header class="sm:w-full sm:px-3 lg:w-[95%] lg:px-0 h-28 backdrop-blur-sm z-[9999] flex items-center justify-between fixed top-0">
-            <h1 class="w-[225px] text-4xl font-extrabold uppercase">
-                <a href="index.html">BR.<span class="text-gray">F</span></a>
-            </h1>
-            <div class="h-auto relative flex items-center justify-center" id="search-box">
-                <input type="text" name="search" placeholder="Search..." autocomplete="off" id="search" class="h-[50px] w-[370px] bg-merino text-gray rounded-xl caret-gray transition-all duration-375 outline-none focus:w-[400px] focus:shadow-lg pl-16">
-                <i class='bx bx-search text-[1.75rem] text-gray absolute left-5'></i>
-            </div>
-            <div id="profile-wrapper" class="w-[225px] sm:hidden md:flex items-center md:justify-end lg:justify-between">
-                <div id="icons-wrapper" class="w-[150px] items-center justify-around font-medium sm:hidden lg:flex">
-                    <a href="#" id="cart" class="flex flex-col items-center justify-center relative transition-all duration-375 hover:text-arylide">
-                            <i class='bx bx-shopping-bag text-3xl relative'></i>
-                            <div class="size-5 bg-arylide text-black font-medium rounded-full absolute left-4 -top-2">
-                                <p class="absolute left-1/2 -translate-x-1/2 bottom-1/2 translate-y-1/2">4</p>
-                            </div>
-                        <h6>Cart</h6>
-                    </a>
-                    <a href="#" id="favorites" class="flex flex-col justify-center items-center transition-all duration-375 hover:text-peach">
-                        <i class='bx bx-heart text-3xl'></i>
-                        <h6>Favorites</h6>
-                    </a>
+        <header class="w-full h-28 flex justify-center sm:bg-white lg:bg-transparent lg:backdrop-blur-sm z-[9999] fixed top-0 sm:px-3 lg:px-0">
+            <div class="wrapper sm:w-full lg:w-[95%] flex items-center justify-between">
+                <h1 class="w-[225px] text-4xl font-extrabold uppercase">
+                    <a href="index.html">BR.<span class="text-gray">F</span></a>
+                </h1>
+                <div class="h-auto relative flex items-center justify-center" id="search-box">
+                    <input type="text" name="search" placeholder="Search..." autocomplete="off" id="search" class="h-[50px] w-[370px] bg-merino text-gray rounded-xl caret-gray transition-all duration-375 outline-none focus:w-[400px] focus:shadow-lg pl-16">
+                    <i class='bx bx-search text-[1.75rem] text-gray absolute left-5'></i>
                 </div>
-                <img src="/build/img/profile.jpg" alt="profile" class="size-14 cursor-pointer rounded-full">
+                <div id="profile-wrapper" class="w-[225px] sm:hidden md:flex items-center md:justify-end lg:justify-between">
+                    <div id="icons-wrapper" class="w-[150px] items-center justify-around font-medium sm:hidden lg:flex">
+                        <a href="#" id="cart" class="flex flex-col items-center justify-center relative transition-all duration-375 hover:text-arylide">
+                                <i class='bx bx-shopping-bag text-3xl relative'></i>
+                                <div class="size-5 bg-arylide text-black font-medium rounded-full absolute left-4 -top-2">
+                                    <p class="absolute left-1/2 -translate-x-1/2 bottom-1/2 translate-y-1/2">4</p>
+                                </div>
+                            <h6>Cart</h6>
+                        </a>
+                        <a href="#" id="favorites" class="flex flex-col justify-center items-center transition-all duration-375 hover:text-peach">
+                            <i class='bx bx-heart text-3xl'></i>
+                            <h6>Favorites</h6>
+                        </a>
+                    </div>
+                    <img src="/build/img/profile.jpg" alt="profile" class="size-14 cursor-pointer rounded-full">
+                </div>
             </div>
         </header>
         <main class="w-[95%] min-h-screen mt-28">
             <div id="categories" class="w-full h-14 flex items-center sm:justify-center lg:justify-start border-b-[2px] border-b-merino">
-                <ul class="w-auto h-auto flex justify-center space-x-[40px] font-medium">
+                <ul class="w-auto h-auto flex flex-wrap justify-center space-x-[40px] font-medium" id="main-nav">
                     <li>
                         <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Women</a>
                     </li>
@@ -176,7 +178,7 @@
                     </p>
                 </div>
             </div>
-            <div id="comments-rating-ad" class="w-full flex sm:flex-col md:flex-row items-center justify-between h-[780px] mt-[72px]">
+            <div id="comments-rating-ad" class="w-full flex sm:flex-col md:flex-row items-center justify-between mt-[72px]">
                 <div id="comments" class="h-full sm:w-full md:w-3/5">
                     <div class="heading-wrapper w-full flex justify-start space-x-7 text-4xl font-bold text-dawn mb-10">
                         <a href="#" class="transition-all duration-375 hover:text-black">Details</a>
@@ -300,7 +302,7 @@
                             <h6 class="text-sm font-bold">1</h6>
                         </div>
                     </div>
-                    <div id="ad" class="w-full bg-[#d7d2bf] rounded-lg px-7 py-8 mt-16">
+                    <div id="ad" class="w-full bg-[#d7d2bf] sm:text-center lg:text-left rounded-lg px-7 py-8 mt-16">
                         <h2 class="font-bold text-3xl leading-normal">Popular brands with discounts over 25%</h2>
                         <div id="brands" class="w-fit flex items-center -space-x-2 mt-3">
                             <img src="/build/img/logo.jpg" alt="reebok" class="size-8 rounded-full">
@@ -315,10 +317,10 @@
                     </div>
                 </div>
             </div>
-            <div id="related" class="w-full h-[400px] md:mt-20 lg:mt-0">
-                <div class="heading-wrapper w-full flex items-center justify-between">
+            <div id="related" class="w-full mt-[88px]">
+                <div class="heading-wrapper w-full flex items-center sm:justify-center md:justify-between">
                     <h2 class="text-5xl font-bold">Related products</h2>
-                    <div class="controls-wrapper w-24 flex items-center justify-between">
+                    <div class="controls-wrapper w-24 hidden md:flex items-center justify-between">
                         <div id="prev" class="size-10 flex items-center justify-center border border-dawn text-dawn rounded-md">
                             <i class='bx bxs-chevron-left text-2xl'></i>
                         </div>
@@ -327,17 +329,17 @@
                         </a>
                     </div>
                 </div>
-                <div id="cards" class="w-full h-[300px] flex items-center justify-between mt-10">
-                    <div class="card w-[250px] h-full bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
+                <div id="cards" class="w-full flex flex-wrap items-center justify-around gap-10 mt-10">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                             <a href="#" class="size-3 bg-[#efc2aa] rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/adidas.png" alt="adidas yeezy boost 700" class="w-full relative bottom-3">
-                        <h2 class="text-md mt-7 font-medium relative bottom-3">Adidas Yeezy Boost 700</h2>
+                        <img src="/build/img/related/adidas.png" alt="adidas yeezy boost 700" class="w-full relative bottom-6">
+                        <h2 class="text-md font-medium">Adidas Yeezy Boost 700</h2>
                         <h3 class="text-2xl font-bold mt-4 relative bottom-3">$149.15</h3>
                     </div>
-                    <div class="card w-[250px] h-full bg-merino rounded-md flex flex-col items-center justify-center relative" id="new-balance">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="new-balance">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-white rounded-full"></a>
                             <a href="#" class="size-3 bg-[#f66a6a] rounded-full"></a>
@@ -347,7 +349,7 @@
                         <h2 class="text-md mt-7 font-medium">New Balance BB550</h2>
                         <h3 class="text-2xl font-bold mt-4">$210.00</h3>
                     </div>
-                    <div class="card w-[250px] h-full bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-[#d1c1b2] rounded-full"></a>
                             <a href="#" class="size-3 bg-[#71c291] rounded-full"></a>
@@ -356,17 +358,105 @@
                         <h2 class="text-md mt-7 font-medium">ASICS Gel-Lyte III OG</h2>
                         <h3 class="text-2xl font-bold mt-4">$196.50</h3>
                     </div>
-                    <div class="card w-[250px] h-full bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-white rounded-full"></a>
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/adidas.png" alt="adidas yeezy boost 700" class="w-[90%]">
-                        <h2 class="text-md mt-7 font-medium">Reebok Classic Leather</h2>
-                        <h3 class="text-2xl font-bold mt-4">$149.15</h3>
+                        <img src="/build/img/related/reebok.png" alt="adidas yeezy boost 700" class="w-[90%]">
+                        <h2 class="text-md font-medium relative top-4">Reebok Classic Leather</h2>
+                        <h3 class="text-2xl font-bold mt-8">$149.15</h3>
                     </div>
                 </div>
             </div>
         </main>
+        <footer class="w-full flex justify-center bg-[#eff3f4] mt-20 py-10 pl-10 pr-56">
+            <div class="wrapper w-[95%] flex justify-between">
+                <h2 class="text-4xl font-extrabold uppercase">
+                    <a href="index.html">BR.<span class="text-gray">F</span></a>
+                </h2>
+                <nav id="shop">
+                    <h3 class="text-2xl font-bold mb-5">Shop</h3>
+                    <ul class="w-fit flex flex-col justify-center space-y-5 font-medium" id="footer-nav">
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Women</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Men</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Kids</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Sports</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Brands</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">New</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav id="company">
+                    <h3 class="text-2xl font-bold mb-5">Company</h3>
+                    <ul class="w-fit flex flex-col justify-center space-y-5 font-medium" id="footer-nav">
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">About us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Stores</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Contacts</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">News</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Partners</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav id="support">
+                    <h3 class="text-2xl font-bold mb-5">Support</h3>
+                    <ul class="w-fit flex flex-col justify-center space-y-5 font-medium" id="footer-nav">
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Help</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Delivery</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Returns & Refunds</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Track your order</a>
+                        </li>
+                        <li>
+                            <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Return your order</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div id="contacts">
+                    <h3 class="text-2xl font-bold mb-5">Contacts</h3>
+                    <p class="font-medium">+44 740 438-02-65</p>
+                    <div id="social-media" class="flex items-center space-x-4 text-2xl mt-3 text-gray">
+                        <a href="https://twitter.com/ronasit" class="transition-all duration-375 hover:text-arylide">
+                            <i class='bx bxl-twitter'></i>
+                        </a>
+                        <a href="https://instagram.com/ronas_it" class="transition-all duration-375 hover:text-arylide">
+                            <i class='bx bxl-instagram-alt'></i>
+                        </a>
+                        <a href="https://facebook.com/RonasITSoftware" class="transition-all duration-375 hover:text-arylide">
+                            <i class='bx bxl-facebook-circle'></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/ronasit" class="transition-all duration-375 hover:text-arylide">
+                            <i class='bx bxl-linkedin-square'></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
