Still working on responsive design

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
             </div>
         </main>
-        <footer class="w-full flex justify-center bg-[#eff3f4] mt-20 py-10 pl-10 pr-56">
+        <footer class="w-full flex justify-center bg-[#eff3f4] mt-20 sm:pt-10 xl:py-10 xl:pl-10 xl:pr-56">
             <div class="wrapper w-[95%] flex justify-between">
                 <h2 class="text-4xl font-extrabold uppercase">
                     <a href="index.html">BR.<span class="text-gray">F</span></a>
@@ -451,8 +451,8 @@
                         <a href="https://facebook.com/RonasITSoftware" class="transition-all duration-375 hover:text-arylide">
                             <i class='bx bxl-facebook-circle'></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/ronasit" class="transition-all duration-375 hover:text-arylide">
-                            <i class='bx bxl-linkedin-square'></i>
+                        <a href="https://www.youtube.com/c/Ronasit" class="transition-all duration-375 hover:text-arylide">
+                            <i class='bx bxl-youtube'></i>
                         </a>
                     </div>
                 </div>
