--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 </nav>
                 <nav id="company">
                     <h3 class="text-2xl font-bold mb-2 mt-6 sm-xl:mb-5 sm-xl:mt-0">Company</h3>
-                    <ul class="w-full sm-xl:w-fit flex flex-row sm-xl:flex-col justify-start space-x-8 sm-xl:justify-center sm-xl:space-x-0 sm-xl:space-y-5 sm:text-xs sm-l:text-sm font-medium">
+                    <ul class="w-full sm-xl:w-fit flex flex-row sm-xl:flex-col justify-start sm:space-x-7 sm-m:space-x-8 sm-xl:justify-center sm-xl:space-x-0 sm-xl:space-y-5 sm:text-xs sm-l:text-sm font-medium">
                         <li>
                             <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">About us</a>
                         </li>
@@ -425,7 +425,7 @@
                 </nav>
                 <nav id="support">
                     <h3 class="text-2xl font-bold mb-2 mt-6 sm-xl:mb-5 sm-xl:mt-0">Support</h3>
-                    <ul class="w-full sm-xl:w-fit flex flex-row sm-xl:flex-col justify-center space-x-8 sm-xl:justify-center sm-xl:space-x-0 sm-xl:space-y-5 sm:text-xs sm-l:text-sm font-medium">
+                    <ul class="w-full sm-xl:w-fit flex flex-row sm-xl:flex-col justify-center sm:space-x-7 sm-m:space-x-8 sm-xl:justify-center sm-xl:space-x-0 sm-xl:space-y-5 sm:text-xs sm-l:text-sm font-medium">
                         <li>
                             <a href="#" class="relative after:absolute after:-bottom-[5px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375">Help</a>
                         </li>
@@ -445,7 +445,7 @@
                 </nav>
                 <div id="contacts">
                     <h3 class="text-2xl font-bold mb-2 mt-10 sm-xl:mb-5 sm-xl:mt-0">Contacts</h3>
-                    <p class="font-medium">+44 740 438-02-65</p>
+                    <a href="tel:+44 740 438-02-65" class="relative after:absolute after:-bottom-[2px] after:left-0 after:content-[''] after:h-[1.5px] after:w-full after:opacity-0 after:bg-black hover:after:opacity-100 after:transition-all after:duration-375 font-medium">+44 740 438-02-65</a>
                     <div id="social-media" class="flex items-center space-x-4 text-2xl mt-3 text-gray">
                         <a href="https://twitter.com/ronasit" class="transition-all duration-375 hover:text-arylide">
                             <i class='bx bxl-twitter'></i>
