Made some changes to the buttons in #action-buttons

--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
                         </div>
                         <p class="text-sm font-medium text-[#beb180] mt-3">Size guide</p>
                     </div>
-                    <div id="action-buttons" class="flex items-center sm:justify-evenly lg:justify-between mt-10">
-                        <button class="h-[60px] sm:w-1/2 lg:w-4/5 bg-black text-white text-lg font-medium rounded-xl" id="add-to-cart">
+                    <div id="action-buttons" class="flex items-center justify-between mt-10">
+                        <button class="h-[60px] sm:w-3/4 md:w-4/5 bg-black text-white text-lg font-medium rounded-xl" id="add-to-cart">
                             <p class="flex items-center justify-center">
-                                <i class='bx bx-shopping-bag text-2xl lg:pr-2'></i><span class="sm:hidden lg:inline-block">Add to cart</span>
+                                <i class='bx bx-shopping-bag text-2xl pr-2'></i><span>Add to cart</span>
                             </p>
                         </button>
                         <button class="size-[59px] bg-merino rounded-xl flex items-center justify-center" id="save-to-favorites">
                             <i class='bx bx-heart text-2xl'></i>
                         </button>
                     </div>
-                    <p class="flex items-center font-medium mt-4">
+                    <p class="flex sm:justify-center lg:justify-start items-center font-medium mt-4">
                         <i class='bx bxs-truck text-2xl pr-3'></i> Free delivery on orders over $30.00
                     </p>
                 </div>
