Finished the responsive design

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     </p>
                 </div>
             </div>
-            <div id="comments-rating-ad" class="w-full flex sm:flex-col md:flex-row items-center justify-between mt-[72px]">
-                <div id="comments" class="h-full sm:w-full md:w-3/5">
+            <div id="comments-rating-ad" class="w-full flex sm:flex-col lg:flex-row items-center justify-between mt-[72px]">
+                <div id="comments" class="h-full sm:w-full lg:w-3/5">
                     <div class="heading-wrapper w-full flex justify-start space-x-7 sm:text-xl sm-m:text-2xl md:text-4xl font-bold text-dawn mb-10">
                         <a href="#" class="transition-all duration-375 hover:text-black">Details</a>
                         <a href="#" class="text-black">Reviews</a>
@@ -268,7 +268,7 @@
                     </div>
                     <hr class="border-gray/[.5]">
                 </div>
-                <div id="rating-ad" class="h-full sm:w-full sm:mt-20 md:w-1/5 md:mt-0">
+                <div id="rating-ad" class="h-full sm:w-full sm:mt-20 lg:w-1/4 2xl:w-1/5 lg:mt-0">
                     <div id="overall-rating"
                         class="w-full flex justify-between items-center border-b-2 border-b-gray/[.15] pb-6 mb-6">
                         <div class="rating-wrapper text-arylide text-3xl">
@@ -282,44 +282,44 @@
                     </div>
                     <div id="statistics" class="w-full flex flex-col items-center space-y-2">
                         <div class="rating-count w-full flex items-center justify-between">
-                            <h6 class="text-gray text-sm font-medium w-[10px]">5</h6>
+                            <h6 class="w-[10.65%] text-gray text-sm font-medium">5</h6>
                             <div
-                                class="visualisation w-[235px] h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_80%,#ebebeb_80%,#ebebeb_80%)] rounded-sm mx-3">
+                                class="visualisation w-full h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_80%,#ebebeb_80%,#ebebeb_80%)] rounded-sm mx-3">
                             </div>
-                            <h6 class="text-sm font-bold w-[17.23px] text-right">28</h6>
+                            <h6 class="text-sm w-[10.65%] font-bold text-right">28</h6>
                         </div>
                         <div class="rating-count w-full flex items-center justify-between">
-                            <h6 class="text-gray text-sm font-medium w-[10px]">4</h6>
+                            <h6 class="w-1/12 text-gray text-sm font-medium">4</h6>
                             <div
-                                class="visualisation w-[235px] h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_40%,#ebebeb_40%,#ebebeb_40%)] rounded-sm mx-3">
+                                class="visualisation w-4/5 h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_40%,#ebebeb_40%,#ebebeb_40%)] rounded-sm mx-3">
                             </div>
-                            <h6 class="text-sm font-bold w-[17.23px] text-right">9</h6>
+                            <h6 class="text-sm w-1/12 font-bold text-right">9</h6>
                         </div>
                         <div class="rating-count w-full flex items-center justify-between">
-                            <h6 class="text-gray text-sm font-medium w-[10px]">3</h6>
+                            <h6 class="w-1/12 text-gray text-sm font-medium">3</h6>
                             <div
-                                class="visualisation w-[235px] h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_20%,#ebebeb_20%,#ebebeb_20%)] rounded-sm mx-3">
+                                class="visualisation w-4/5 h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_20%,#ebebeb_20%,#ebebeb_20%)] rounded-sm mx-3">
                             </div>
-                            <h6 class="text-sm font-bold w-[17.23px] text-right">4</h6>
+                            <h6 class="text-sm w-1/12 font-bold text-right">4</h6>
                         </div>
                         <div class="rating-count w-full flex items-center justify-between">
-                            <h6 class="text-gray text-sm font-medium w-[10px]">2</h6>
+                            <h6 class="w-1/12 text-gray text-sm font-medium">2</h6>
                             <div
-                                class="visualisation w-[235px] h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_6%,#ebebeb_6%,#ebebeb_6%)] rounded-sm mx-3">
+                                class="visualisation w-4/5 h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_6%,#ebebeb_6%,#ebebeb_6%)] rounded-sm mx-3">
                             </div>
-                            <h6 class="text-sm font-bold w-[17.23px] text-right">1</h6>
+                            <h6 class="text-sm w-1/12 font-bold text-right">1</h6>
                         </div>
                         <div class="rating-count w-full flex items-center justify-between">
-                            <h6 class="text-gray text-sm font-medium w-[10px]">1</h6>
+                            <h6 class="w-1/12 text-gray text-sm font-medium">1</h6>
                             <div
-                                class="visualisation w-[235px] h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_6%,#ebebeb_6%,#ebebeb_6%)] rounded-sm mr-3">
+                                class="visualisation w-4/5 h-3 bg-[linear-gradient(90deg,#edcf5d_0%,#edcf5d_6%,#ebebeb_6%,#ebebeb_6%)] rounded-sm mx-3">
                             </div>
-                            <h6 class="text-sm font-bold">1</h6>
+                            <h6 class="text-sm w-1/12 font-bold text-right">1</h6>
                         </div>
                     </div>
-                    <div id="ad" class="w-full bg-[#d7d2bf] sm:text-center xl:text-left rounded-lg px-7 py-8 mt-16">
+                    <div id="ad" class="w-full bg-[#d7d2bf] sm:text-center lg:text-left rounded-lg px-7 py-8 mt-16">
                         <h2 class="font-bold sm:text-xl  2xl:text-3xl leading-normal">Popular brands with discounts over 25%</h2>
-                        <div id="brands" class="w-fit flex items-center -space-x-2 mt-3 relative sm:left-1/2 sm:-translate-x-1/2 md:left-0 md:translate-x-0">
+                        <div id="brands" class="w-fit flex items-center -space-x-2 mt-3 relative sm:left-1/2 sm:-translate-x-1/2 lg:left-0 lg:translate-x-0">
                             <img src="/build/img/logo.jpg" alt="reebok" class="size-8 rounded-full">
                             <img src="/build/img/brands/lacoste.jpeg" alt="lacoste" class="size-8 rounded-full">
                             <img src="/build/img/brands/asics.jpeg" alt="asics" class="size-8 rounded-full">
@@ -334,7 +334,7 @@
             </div>
             <div id="related" class="w-full mt-[88px]">
                 <div class="heading-wrapper w-full flex items-center sm:justify-center md:justify-between">
-                    <h2 class="text-5xl font-bold">Related products</h2>
+                    <h2 class="text-5xl font-bold text-center">Related products</h2>
                     <div class="controls-wrapper w-24 hidden md:flex items-center justify-between">
                         <div id="prev" class="size-10 flex items-center justify-center border border-dawn text-dawn rounded-md">
                             <i class='bx bxs-chevron-left text-2xl'></i>
