--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
         <link rel="manifest" href="/build/img/favicon/site.webmanifest">
         <!-- Favicon -->
 
+        <!-- Custom scrollbar -->
+         <script src="/build/js/readingScrollbar.js"></script>
+        <!-- Custom scrollbar -->
+
         <!-- Hamburger toggle -->
         <script src="/build/js/hamburgerToggle.js"></script>
         <!-- Hamburger toggle -->
+
+        <!-- Always load page on top -->
+         <script src="/build/js/backOnTop.js" defer></script>
+        <!-- Always load page on top -->
+
         <title>Br.F</title>
     </head>
 
     <body class="min-h-screen w-full flex flex-col items-center justify-center overflow-x-hidden">
+        <div id="scrollbar" class="w-full"></div>
         <header class="w-full h-28 flex justify-center sm:bg-white lg:bg-transparent lg:backdrop-blur-sm z-[9999] fixed top-0 sm:px-3 lg:px-0">
             <div class="wrapper sm:w-full lg:w-[95%] flex items-center justify-between">
                 <h1 class="lg:w-[225px] text-4xl font-extrabold uppercase">
@@ -129,8 +139,8 @@
                             <p>42 reviews</p>
                         </div>
                     </div>
-                    <h3 id="price" class="w-fit font-bold text-5xl mt-14">$199.00</h3>
-                    <div id="colors" class="w-fit flex flex-col mt-14">
+                    <h3 id="price" class="w-fit font-bold text-5xl my-7">$199.00</h3>
+                    <div id="colors" class="w-fit flex flex-col">
                         <p class="current-color font-bold">Color <span class="text-merino text-xl px-2">•</span> <span class="text-gray font-medium">White</span></p>
                         <div class="colors-gallery w-[200px] flex justify-between mt-4">
                             <a href="#">
@@ -332,7 +342,7 @@
                     </div>
                 </div>
             </div>
-            <div id="related" class="w-full mt-[88px]">
+            <div id="related" class="w-full my-[88px]">
                 <div class="heading-wrapper w-full flex items-center sm:justify-center md:justify-between">
                     <h2 class="text-5xl font-bold text-center">Related products</h2>
                     <div class="controls-wrapper w-24 hidden md:flex items-center justify-between">
@@ -345,7 +355,7 @@
                     </div>
                 </div>
                 <div id="cards" class="w-full flex flex-wrap items-center justify-around gap-10 mt-10">
-                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
+                    <div class="card h-[300px] aspect-[5/6] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                             <a href="#" class="size-3 bg-[#efc2aa] rounded-full"></a>
@@ -370,7 +380,7 @@
                             <a href="#" class="size-3 bg-[#71c291] rounded-full"></a>
                         </div>
                         <img src="/build/img/related/asycs.png" alt="asics gel-lyte III OG" class="w-[90%]">
-                        <h2 class="text-md mt-7 font-medium">ASICS Gel-Lyte III OG</h2>
+                        <h2 class="text-md mt-5 font-medium">ASICS Gel-Lyte III OG</h2>
                         <h3 class="text-2xl font-bold mt-4">$196.50</h3>
                     </div>
                     <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
@@ -379,8 +389,8 @@
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                         </div>
                         <img src="/build/img/related/reebok.png" alt="reebok classic leather" class="w-[90%]">
-                        <h2 class="text-md font-medium relative top-4">Reebok Classic Leather</h2>
-                        <h3 class="text-2xl font-bold mt-8">$149.15</h3>
+                        <h2 class="text-md font-medium relative">Reebok Classic Leather</h2>
+                        <h3 class="text-2xl font-bold relative top-4">$149.15</h3>
                     </div>
                 </div>
             </div>
