--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </div>
                 <div id="cards" class="w-full flex flex-wrap items-center justify-around gap-10 mt-10">
                     <div class="card h-[300px] aspect-[5/6] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
-                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
+                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-2 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                             <a href="#" class="size-3 bg-[#efc2aa] rounded-full"></a>
                         </div>
@@ -374,8 +374,8 @@
                         <h2 class="text-md mt-7 font-medium">New Balance BB550</h2>
                         <h3 class="text-2xl font-bold mt-4">$210.00</h3>
                     </div>
-                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
-                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="asics">
+                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-2 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-[#d1c1b2] rounded-full"></a>
                             <a href="#" class="size-3 bg-[#71c291] rounded-full"></a>
                         </div>
@@ -383,14 +383,14 @@
                         <h2 class="text-md mt-5 font-medium">ASICS Gel-Lyte III OG</h2>
                         <h3 class="text-2xl font-bold mt-4">$196.50</h3>
                     </div>
-                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="adidas">
-                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
+                    <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="reebok">
+                        <div class="color-options h-8 w-12 flex items-center justify-center space-x-2 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-white rounded-full"></a>
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/reebok.png" alt="reebok classic leather" class="w-[90%]">
-                        <h2 class="text-md font-medium relative">Reebok Classic Leather</h2>
-                        <h3 class="text-2xl font-bold relative top-4">$149.15</h3>
+                        <img src="/build/img/related/reebok.png" alt="reebok classic leather" class="w-[90%] mb-2">
+                        <h2 class="text-md mt-5 font-medium">Reebok Classic Leather</h2>
+                        <h3 class="text-2xl font-bold mt-4">$149.15</h3>
                     </div>
                 </div>
             </div>
