Made some design improvements

--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                             <a href="#" class="size-3 bg-[#efc2aa] rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/adidas.png" alt="adidas yeezy boost 700" class="w-full relative bottom-6">
-                        <h2 class="text-md font-medium">Adidas Yeezy Boost 700</h2>
-                        <h3 class="text-2xl font-bold mt-4">$205.00</h3>
+                        <img src="/build/img/related/adidas.png" alt="adidas yeezy boost 700" class="w-full scale-[1.35]">
+                        <h2 class="text-md font-medium mt-9">Adidas Yeezy Boost 700</h2>
+                        <h3 class="text-2xl font-bold mt-3">$205.00</h3>
                     </div>
                     <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="new-balance">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-1 absolute top-3 right-3">
@@ -370,27 +370,27 @@
                             <a href="#" class="size-3 bg-[#f66a6a] rounded-full"></a>
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/new-balance.png" alt="new balance bb550" class="w-[90%]">
+                        <img src="/build/img/related/new-balance.png" alt="new balance bb550" class="w-[90%] scale-[1.2] mt-9">
                         <h2 class="text-md mt-7 font-medium">New Balance BB550</h2>
-                        <h3 class="text-2xl font-bold mt-4">$210.00</h3>
+                        <h3 class="text-2xl font-bold mt-3">$210.00</h3>
                     </div>
                     <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="asics">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-2 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-[#d1c1b2] rounded-full"></a>
                             <a href="#" class="size-3 bg-[#71c291] rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/asycs.png" alt="asics gel-lyte III OG" class="w-[90%]">
-                        <h2 class="text-md mt-5 font-medium">ASICS Gel-Lyte III OG</h2>
-                        <h3 class="text-2xl font-bold mt-4">$196.50</h3>
+                        <img src="/build/img/related/asycs.png" alt="asics gel-lyte III OG" class="w-[90%] scale-[1.2] mt-7">
+                        <h2 class="text-md mt-7 font-medium">ASICS Gel-Lyte III OG</h2>
+                        <h3 class="text-2xl font-bold mt-3">$196.50</h3>
                     </div>
                     <div class="card w-[250px] h-[300px] bg-merino rounded-md flex flex-col items-center justify-center relative" id="reebok">
                         <div class="color-options h-8 w-12 flex items-center justify-center space-x-2 absolute top-3 right-3">
                             <a href="#" class="size-3 bg-white rounded-full"></a>
                             <a href="#" class="size-3 bg-black rounded-full"></a>
                         </div>
-                        <img src="/build/img/related/reebok.png" alt="reebok classic leather" class="w-[90%] mb-2">
-                        <h2 class="text-md mt-5 font-medium">Reebok Classic Leather</h2>
-                        <h3 class="text-2xl font-bold mt-4">$149.15</h3>
+                        <img src="/build/img/related/reebok.png" alt="reebok classic leather" class="w-[90%] scale-[1.2] mt-7">
+                        <h2 class="text-md mt-10 font-medium">Reebok Classic Leather</h2>
+                        <h3 class="text-2xl font-bold mt-3">$149.15</h3>
                     </div>
                 </div>
             </div>
