Finished the website!

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <div id="comments-rating-ad" class="w-full flex sm:flex-col lg:flex-row items-center justify-between mt-[72px]">
-                <div id="comments" class="h-full sm:w-full lg:w-3/5">
+                <div id="comments" class="h-full sm:w-full lg:w-3/5 relative">
                     <div class="heading-wrapper w-full flex justify-start space-x-7 sm:text-xl sm-m:text-2xl md:text-4xl font-bold text-dawn mb-10">
                         <a href="#" class="transition-all duration-375 hover:text-black">Details</a>
                         <a href="#" class="text-black">Reviews</a>
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="connector"></div>
+                    <div id="connector" class="w-6 h-[140px] -z-30 border-l border-b rounded-bl-xl border-l-dawn border-b-dawn absolute sm:top-[65%] sm-l:top-[64.5%] left-5"></div>
                     <div id="reply" class="w-[calc(100%-48px)] pb-7 mt-3.5 ml-12">
                         <div class="profile w-fit flex justify-between">
                             <img src="/build/img/profiles/andrew.jpg" alt="andrew g" class="rounded-full size-10 mr-2">
